--- a/Views/Pages/Edit_Product.ejs
+++ b/Views/Pages/Edit_Product.ejs
@@ -89,7 +89,7 @@
                                             Thêm Khuyến Mãi
                                       </button>
                             </div></center>
-                             <image id="profileImage" class="wd-100 rounded-circle"  src="./Upload/<%=listcats.imgURL%>" style="margin-left: 71px;
+                             <image id="profileImage" class="wd-100 rounded-circle"  src="<%=listcats.imgURL%>" style="margin-left: 71px;
                                 margin-top: -90px;" />
                                         <h5 style="font-family: 'Oswald', sans-serif; margin-left: 42px;
                                         margin-top: 7px;font-weight: 700;font-size: 13px">MSP:<%=listcats.proID%></h5>
