--- a/Views/Pages/Admin_List.ejs
+++ b/Views/Pages/Admin_List.ejs
@@ -46,7 +46,7 @@ db.collection("Admin")
         <tr role="row" >
 <td class="sorting_1">
  <center>
-    <img src="./Upload/`+ element.url + `" class="wd-70 rounded-circle" alt="Image">
+    <img src=" `+ element.url + `" class="wd-70 rounded-circle" alt="Image">
 </center>
 </td>
 <td style="width: 430px;text-align: center;padding-top: 33px;color: black;">`+ element.AcFullName + `</td>
