--- a/Views/Block/Head.ejs
+++ b/Views/Block/Head.ejs
@@ -28,8 +28,8 @@
 
 
     <title>Trang Quản Trị</title>
-    <!-- <base href="http://localhost:3000/"> -->
-    <base href="https://nguyengiaminh.herokuapp.com/">
+    <base href="http://localhost:3000/">
+    <!-- <base href="https://nguyengiaminh.herokuapp.com/"> -->
     <!-- vendor css -->
     <link href="Admin/lib/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="Admin/lib/Ionicons/css/ionicons.css" rel="stylesheet">
