--- a/Views/Pages/Edit_Product.ejs
+++ b/Views/Pages/Edit_Product.ejs
@@ -51,7 +51,7 @@
                                   <label class="control-label">Ngày Bắt Đầu Khuyến Mãi: : <span class="required"></span>
                                   </label>
                                   <div class="col-md-6 col-sm-6 col-xs-12">
-                                      <input type="date" id="startsale" required="required"  style="width: 450px;" name="startsale" class="form-control" value="2013-01-08 00:00:00">
+                                      <input type="datetime" id="startsale" required="required"  style="width: 450px;" name="startsale" class="form-control" value="2013-01-08 00:00:00">
 
                                     </div>
                           </div>
